[build-system]
requires = [
    "setuptools >= 40.8.0",
    "wheel >= 0.29.0",
]
build-backend = 'setuptools.build_meta'

[project]
name = "pulp-smart-proxy"
version = "0.0.0.dev"
description = "pulp-smart-proxy plugin for the Pulp Project"
readme = "README.md"
authors = [
  {name="AUTHOR", email="author@email.here"},
]
classifiers = [
  "License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)",
  "Operating System :: POSIX :: Linux",
  "Framework :: Django",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.9"
dependencies = [
  "pulpcore>=3.40,<=3.60",
]

[project.urls]
Homepage = "https://example.com"
Documentation = "https://example.com"
Repository = "https://github.com/theforeman/pulp_smart_proxy"
"Bug Tracker" = "https://github.com/theforeman/pulp_smart_proxy/issues"
Changelog = "https://example.com/changes/"


[project.entry-points."pulpcore.plugin"]
pulp_smart_proxy = "pulp_smart_proxy:default_app_config"

[tool.setuptools.packages.find]
where = ["."]

[tool.towncrier]
filename = "CHANGES.md"
directory = "CHANGES/"
title_format = "## {version} ({project_date}) {{: #{version} }}"
template = "CHANGES/.TEMPLATE.md"
issue_format = "[#{issue}](https://github.com/theforeman/pulp_smart_proxy/issues/{issue})"
start_string = "[//]: # (towncrier release notes start)\n"
underlines = ["", "", ""]

    [[tool.towncrier.type]]
        directory = "feature"
        name = "Features"
        showcontent = true

    [[tool.towncrier.type]]
        directory = "bugfix"
        name = "Bugfixes"
        showcontent = true

    [[tool.towncrier.type]]
        directory = "doc"
        name = "Improved Documentation"
        showcontent = true

    [[tool.towncrier.type]]
        directory = "removal"
        name = "Removals"
        showcontent = true

    [[tool.towncrier.type]]
        directory = "deprecation"
        name = "Deprecations"
        showcontent = true

    [[tool.towncrier.type]]
        directory = "misc"
        name = "Misc"
        showcontent = false


[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312"]
exclude = '''
/(
    \.eggs
  | \.git
  | \.venv
  | _build
  | build
  | dist
  | migrations
  | docs
  | protobuf
)/
'''



[tool.check-manifest]
ignore = [
    ".git-blame-ignore-revs",
    "CHANGES/**",
    "dev_requirements.txt",
    "doc_requirements.txt",
    "lint_requirements.txt",
    "docs/**",
    ".flake8",
    "template_config.yml",
    ".coveragerc",
    ".dependabot/config.yml",
    ".ci/**",
    ".github/**",
]

